# HAL

./: .clang-format  AnaFile_8cxx_source.html  AnaFile_8h_source.html  AnalysisManager_8cxx_source.html  AnalysisManager_8h_source.html  Array_8cxx_source.html  Array_8h_source.html  AxisStyle_8cxx_source.html  AxisStyle_8h_source.html  BoostTask_8cxx_source.html  BoostTask_8h_source.html  CMakeLists.txt  ChargedFluctuationsAna_8cxx_source.html  ChargedFluctuationsAna_8h_source.html  ChiSqMap2D_8cxx_source.html  ChiSqMap2D_8h_source.html  ComplexEventInterface_8cxx_source.html  ComplexEventInterface_8h_source.html  ComplexEvent_8cxx_source.html  ComplexEvent_8h_source.html  ComplexTrack_8cxx_source.html  ComplexTrack_8h_source.html  CompressionMap_8cxx_source.html  CompressionMap_8h_source.html  Const_8cxx_source.html  Const_8h_source.html  CopyDataTask_8cxx_source.html  CopyDataTask_8h_source.html  CorrFit1DCFCumac_8cxx_source.html  CorrFit1DCFCumac_8h_source.html  CorrFit1DCFExp_8cxx_source.html  CorrFit1DCFExp_8h_source.html  CorrFit1DCFGauss_8cxx_source.html  CorrFit1DCFGauss_8h_source.html  CorrFit1DCFLorentz_8cxx_source.html  CorrFit1DCFLorentz_8h_source.html  CorrFit1DCFPainter_8cxx_source.html  CorrFit1DCFPainter_8h_source.html  CorrFit1DCFPoly_8cxx_source.html  CorrFit1DCFPoly_8h_source.html  (+2569 more)
analysis/femto/: CMakeLists.txt  HalFemtoLinkDef.h  HalFemtoLinkDef2.h
analysis/femto/ana/: FemtoBasicAna.cxx  FemtoBasicAna.h  FemtoDumpPairAna.cxx  FemtoDumpPairAna.h  FemtoEventBinsAna.cxx  FemtoEventBinsAna.h  FemtoFreezeoutsAna.cxx  FemtoFreezeoutsAna.h  FemtoFreezoutsAna.cxx  FemtoFreezoutsAna.h
analysis/femto/base/: Femto1DCF.cxx  Femto1DCF.h  Femto3DCF.cxx  Femto3DCF.h  Femto3DCFQinv.cxx  Femto3DCFQinv.h  FemtoConst.cxx  FemtoConst.h  FemtoCorrFunc.cxx  FemtoCorrFunc.h  FemtoDPhiDEta.cxx  FemtoDPhiDEta.h  FemtoDebug2DCF.cxx  FemtoDebug2DCF.h  FemtoDoubleRatio1DCF.cxx  FemtoFastCut.cxx  FemtoFastCut.h  FemtoFreezeoutGenerator.cxx  FemtoFreezeoutGenerator.h  FemtoFreezoutGenerator.cxx  FemtoFreezoutGenerator.h  FemtoMiniPair.cxx  FemtoMiniPair.h  FemtoPair.cxx  FemtoPair.h  FemtoPairKinematics.cxx  FemtoPairKinematics.h  FemtoSHCF.cxx  FemtoSHCF.h  FemtoSHCFQinv.cxx  FemtoSHCFQinv.h  FemtoSourceModel.cxx  FemtoSourceModel.h  FemtoYlm.cxx  FemtoYlm.h  FemtoYlmIndexes.cxx  FemtoYlmIndexes.h
analysis/femto/corrfit/: CorrFit.cxx  CorrFit.h  CorrFit1DCF.cxx  CorrFit1DCF.h  CorrFit3DCF.cxx  CorrFit3DCF.h  CorrFitConst.cxx  CorrFitConst.h  CorrFitDrawOptions.cxx  CorrFitDrawOptions.h  CorrFitFunc.cxx  CorrFitFunc.h  CorrFitFunc3D.cxx  CorrFitFunc3D.h  CorrFitGUI.cxx  CorrFitGUI.h  CorrFitHDFunc.cxx  CorrFitHDFunc.h  CorrFitKisiel.cxx  CorrFitKisiel.h  CorrFitMapKstarRstar.cxx  CorrFitMapKstarRstar.h  CorrFitMask.cxx  CorrFitMask.h  CorrFitMath1DCF.cxx  CorrFitMath1DCF.h  CorrFitMath3DCF.cxx  CorrFitMath3DCF.h  CorrFitSHCF.cxx  CorrFitSHCF.h  CorrFitSmear1DCF.cxx  CorrFitSmear1DCF.h  CorrFitWielanek.cxx  CorrFitWielanek.h
analysis/femto/imaging/: FemtoImaging.cxx  FemtoImaging.h  FemtoImaging1D.cxx  FemtoImaging1D.h  FemtoImaging3D.cxx  FemtoImaging3D.h
analysis/femto/painters/: CorrFit1DCFPainter.cxx  CorrFit1DCFPainter.h  CorrFit3DCFPainter.cxx  CorrFit3DCFPainter.h  CorrFitPainter.cxx  CorrFitPainter.h  Femto1DCFPainter.cxx  Femto1DCFPainter.h  Femto3DCFPainter.cxx  Femto3DCFPainter.h  FemtoCFPainter.cxx  FemtoCFPainter.h  FemtoSHCFPainter.cxx  FemtoSHCFPainter.h
analysis/femto/weights/: FemtoFsiParsed.cxx  FemtoFsiParsed.h  FemtoFsiTools.F  FemtoFsiWeightLednicky.F  FemtoWeightGenerator.cxx  FemtoWeightGenerator.h  FemtoWeightGeneratorBasic.cxx  FemtoWeightGeneratorBasic.h  FemtoWeightGeneratorDummy.cxx  FemtoWeightGeneratorDummy.h  FemtoWeightGeneratorKisiel.cxx  FemtoWeightGeneratorKisiel.h  (+10 more)
features/: Array.cxx  Array.h  CMakeLists.txt  CompressionMap.cxx  CompressionMap.h  Const.cxx  Const.h  Cout.cxx  Cout.h  HalArray.cxx  HalArray.h  HalConst.cxx  HalConst.h  HalCout.cxx  HalCout.h  HalFeaturesLinkDef.h  HalHelix.cxx  HalHelix.h  HalHelixBase.cxx  HalHelixBase.h  HalObjectMatrix.cxx  HalObjectMatrix.h  HalOptions.cxx  HalOptions.h  HalParameter.cxx  HalParameter.h  HalStd.cxx  HalStd.h  HalXMLNode.cxx  HalXMLNode.h  Helix.cxx  Helix.h  HelixBase.cxx  ObjectMatrix.cxx  ObjectMatrix.h  Options.cxx  Options.h  Parameter.cxx  Parameter.h  Std.cxx  (+5 more)
features/features_apps/: hal_cmake.cpp  hal_jobs.cpp  hal_merger.cpp  hal_report.cpp
features/hist/: ChiSqMap2D.cxx  ChiSqMap2D.h  CorrelationHisto.cxx  CorrelationHisto.h  DividedHisto.cxx  DividedHisto.h  FastHist.cxx  FastHist.h  HalChiSqMap2D.cxx  HalChiSqMap2D.h  HalDividedHisto.cxx  HalDividedHisto.h  HalHistogramManager.cxx  HalHistogramManager.h  HalMultiGraph.cxx  HalMultiGraph.h  HalSplines.cxx  HalSplines.h  HistogramManager.cxx  HistogramManager.h  MultiGraph.cxx  MultiGraph.h  Painter.cxx  Painter.h  Splines.cxx  Splines.h  Style.cxx  Style.h
features/io/: AnaFile.cxx  AnaFile.h  HalAnaFile.cxx  HalAnaFile.h  HalDataManager.cxx  HalDataManager.h  HalHtmlCore.cxx  HalHtmlCore.h  HalJobs.cxx  HalJobs.h  HalLink.cxx  HalLink.h  HalObject.cxx  HalObject.h  HalPackage.cxx  HalPackage.h  HalPackage2HTML.cxx  HalPackage2HTML.h  HalPackageSql.cxx  HalPackageSql.h  Jobs.cxx  Jobs.h  Link.cxx  Link.h  Object.cxx  Object.h  ObjectVoid.cxx  ObjectVoid.h  Package.cxx  Package.h  Pointer.cxx  Pointer.h
features/minimizer/: FitParam.cxx  FitParam.h  HalFitParam.cxx  HalFitParam.h  HalMinimizer.cxx  HalMinimizer.h  Minimizer.cxx  Minimizer.h  MinimizerStepConf.cxx  MinimizerStepConf.h  MultiDimDataManager.cxx  MultiDimDataManager.h  MultiDimExtrapolator.cxx  MultiDimExtrapolator.h  MultiDimFile.cxx  MultiDimFile.h  MultiDimInterpolator.cxx  MultiDimInterpolator.h  MultiDimMinuit.cxx  MultiDimMinuit.h
features/phys/: ErrorCalc.cxx  ErrorCalc.h  FastAxisCalc.cxx  FastAxisCalc.h  HelixBase.cxx  HelixBase.h  ProfileAna2D.cxx  ProfileAna2D.h
features/std/: HalStdHist.cxx  HalStdHist.h  HalStdMath.cxx  HalStdMath.h  HalStdString.cxx  HalStdString.h  StdHist.cxx  StdHist.h  StdMath.cxx  StdMath.h  StdString.cxx  StdString.h
(+910 files in other folders)
